--- a/secrets.toml
+++ b/secrets.toml
@@ -1,6 +1,6 @@
 [supabase]
-url = "https://YOUR_PROJECT.supabase.co"
-service_role = "YOUR_SERVICE_ROLE_KEY"  # only if needed, prefer anon if read-only
+SUPABASE_URL = "https://YOUR_PROJECT.supabase.co"
+SUPABASE_KEY = "YOUR_SERVICE_ROLE_KEY"  # only if needed, prefer anon if read-only
 anon_key = "YOUR_PUBLIC_ANON_KEY"
 
 [hubspot]
