--- a/secrets.toml
+++ b/secrets.toml
@@ -11,3 +11,6 @@ client_id = "YOUR_CLIENT_ID"
 client_secret = "YOUR_CLIENT_SECRET"
 refresh_token = "YOUR_REFRESH_TOKEN"
 realm_id = "YOUR_REALM_ID"
+
+[app pw]
+APP_PASSWORD = "your_secure_password"
