--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ streamlit
 xhtml2pdf
 matplotlib>=3.0
 numpy-financial
-scikit-learn>=1.2
-scipy>=1.9
+scikit-learn>=1.3,<2.0
+scipy>=1.10,<2.0
+numpy
